--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   openldap:
     image: osixia/openldap:latest
     environment:
-      LDAP_BASE_DN: "dc=emanciper,dc=org"
-      LDAP_ORGANISATION: "Association Emanciper"
-      LDAP_DOMAIN: "emanciper.org"
+      LDAP_BASE_DN: ${LDAP_BASE_DN}
+      LDAP_ORGANISATION: ${LDAP_ORGANISATION}
+      LDAP_DOMAIN: ${LDAP_DOMAIN}
       LDAP_ADMIN_PASSWORD: ${LDAP_ADMIN_PASSWORD}
 #      LDAP_TLS: "false"             # deactivate TLS for the LDAP server
     volumes:
@@ -46,8 +46,8 @@ services:
       - ./postgres/pg-init-scripts:/docker-entrypoint-initdb.d
     environment:
      # - POSTGRES_DB=nextcloud
-      - POSTGRES_USER=admindb
-      - POSTGRES_PASSWORD=${POSTGRES_ADMIN_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER_NAME}
+      - POSTGRES_PASSWORD=${POSTGRES_USER_PASSWORD}
       - POSTGRES_MULTIPLE_DATABASES=nextcloud,mattermost
       - TZ='Europe/Paris'
 
@@ -55,7 +55,7 @@ services:
     image: redis:alpine
     restart: always
 
- code:
+  code:
     image: collabora/code:latest
     restart: always
     environment:
@@ -63,7 +63,7 @@ services:
       - username=${COLLABORA_USERNAME}
 #      - aliasgroup1=https://collabora.mydomain.com:443
 #      - aliasgroup2=https://nextcloud.myseconddomain.com:443
-      - server_name=collabora.mydomain.com
+      - server_name=${SERVER_NAME}
       - extra_params=--o:ssl.enable=true
     ports:
       - 9980:9980
@@ -78,18 +78,16 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - POSTGRES_DB=nextcloud
-      - POSTGRES_USER=admindb
+      - POSTGRES_USER=${POSTGRES_USER_NAME}
       - POSTGRES_PASSWORD=${POSTGRES_USER_PASSWORD}
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
-      # - NEXTCLOUD_TRUSTED_DOMAINS=192.168.1.96
+      - NEXTCLOUD_TRUSTED_DOMAINS=${SERVER_NAME}
     depends_on:
       - redis
       - postgres
 
   mattermost:
-    depends_on:
-      - postgres
     image: mattermost/mattermost-enterprise-edition:9.11.2
     restart: always
     security_opt:
@@ -111,14 +109,16 @@ services:
 
       # necessary Mattermost options/variables (see env.example)
       - MM_SQLSETTINGS_DRIVERNAME=postgres
-      - MM_SQLSETTINGS_DATASOURCE=postgres://admindb:${POSTGRES_USER_PASSWORD}@postgres:5432/mattermost?sslmode=disable&connect_timeout=10
+      - MM_SQLSETTINGS_DATASOURCE=postgres://${POSTGRES_USER_NAME}:${POSTGRES_USER_PASSWORD}@postgres:5432/mattermost?sslmode=disable&connect_timeout=10
 
       # necessary for bleve
       - MM_BLEVESETTINGS_INDEXDIR=/mattermost/bleve-indexes
 
       # additional settings
-      - MM_SERVICESETTINGS_SITEURL=http://localhost:8065/
+      - MM_SERVICESETTINGS_SITEURL=http://${SERVER_NAME}:8065/
     ports:
       - 8065:8065
       - 8443:8443/udp
       - 8443:8443/tcp
+    depends_on:
+      - postgres
