--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     environment:
       - password=${COLLABORA_PASSWORD}
       - username=${COLLABORA_USERNAME}
-#      - aliasgroup1=https://collabora.mydomain.com:443
+#      - aliasgroup1=https://intranet.emanciper.org:443
 #      - aliasgroup2=https://nextcloud.myseconddomain.com:443
       - server_name=${SERVER_NAME}
       - extra_params=--o:ssl.enable=true
