Ajout du strict transport ssl header

--- a/intranet.emanciper.org-le-ssl.conf
+++ b/intranet.emanciper.org-le-ssl.conf
@@ -13,6 +13,10 @@
 	ServerAdmin webmaster@emanciper.org
 	DocumentRoot /var/www/intranet.emanciper.org
 
+	<IfModule mod_headers.c>
+      		Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains"
+    	</IfModule>
+
 	<Directory />
 		Options +FollowSymLinks
 	</Directory>
@@ -23,12 +27,12 @@
 		allow from all
 	</Directory>
 
-	# *******************************************
-	# ****** redirection pour nextcloud
-	# *******************************************
-	AllowEncodedSlashes On
-	Timeout 3600
-    	ProxyPreserveHost On
+        # *******************************************
+        # ****** redirection pour nextcloud
+        # *******************************************
+        AllowEncodedSlashes On
+        Timeout 3600
+        ProxyPreserveHost On
         ProxyPass / http://localhost:8080/
         ProxyPassReverse / http://localhost:8080/
 
@@ -52,8 +56,8 @@ RewriteRule ^/\.well-known/caldav https://%{SERVER_NAME}/remote.php/dav/ [R=301,
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
 
-SSLCertificateFile /etc/letsencrypt/live/discussion.emanciper.org/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/discussion.emanciper.org/privkey.pem
+SSLCertificateFile /etc/letsencrypt/live/intranet.emanciper.org/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/intranet.emanciper.org/privkey.pem
 Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
 </IfModule>
