--- a/unbound.conf
+++ b/unbound.conf
@@ -15,8 +15,10 @@ server:
     directory: "/etc/unbound"
     tls-cert-bundle: /etc/ssl/certs/ca-certificates.crt
     
-    do-ip6: no
+    do-ip6: yes
     interface: 192.168.1.25
+#   interface: 0.0.0.0
+    interface: ::0
     port: 53
     prefetch: yes
 
@@ -41,16 +43,22 @@ server:
     #control which clients are allowed to make (recursive) queries
     access-control: 127.0.0.1/32 allow_snoop
     access-control: ::1 allow_snoop
+    access-control: 2a02:842b:6c02:5501::/48 allow
     access-control: 127.0.0.0/8 allow
     access-control: 192.168.1.0/24 allow
 
 # local zone
     local-zone: "emanciper.org." static
-
     local-data: "intranet.emanciper.org.  IN A 192.168.1.25"
+    local-data: "intranet.emanciper.org.  IN AAAA 2a02:842b:6c02:5501:967a:c85e:a776:abcd"
     local-data: "bbb.emanciper.org.  IN A 192.168.1.25"
+    local-data: "bbb.emanciper.org.  IN AAAA 2a02:842b:6c02:5501:967a:c85e:a776:abcd"
     local-data: "discussion.emanciper.org.  IN A 192.168.1.25"
+    local-data: "discussion.emanciper.org.  IN AAAA 2a02:842b:6c02:5501:967a:c85e:a776:abcd"
     local-data: "office.emanciper.org.  IN A 192.168.1.25"
+    local-data: "office.emanciper.org.  IN AAAA 2a02:842b:6c02:5501:967a:c85e:a776:abcd"
+    local-data: "ldap.emanciper.org.  IN A 192.168.1.25"
+    local-data: "ldap.emanciper.org.  IN AAAA 2a02:842b:6c02:5501:967a:c85e:a776:abcd"
     local-data: "www.emanciper.org.  IN A 188.165.53.185"
     local-data: "emanciper.org.  IN A 188.165.53.185"
     local-data: "mail.emanciper.org.  IN A 193.70.18.144"
@@ -59,6 +67,12 @@ server:
     local-data-ptr: "192.168.1.25  bbb.emanciper.org"
     local-data-ptr: "192.168.1.25  discussion.emanciper.org"
     local-data-ptr: "192.168.1.25  office.emanciper.org"
+    local-data-ptr: "192.168.1.25  ldap.emanciper.org"
+    local-data-ptr: "2a02:842b:6c02:5501:967a:c85e:a776:abcd intranet.emanciper.org"
+    local-data-ptr: "2a02:842b:6c02:5501:967a:c85e:a776:abcd bbb.emanciper.org"
+    local-data-ptr: "2a02:842b:6c02:5501:967a:c85e:a776:abcd discussion.emanciper.org"
+    local-data-ptr: "2a02:842b:6c02:5501:967a:c85e:a776:abcd office.emanciper.org"
+    local-data-ptr: "2a02:842b:6c02:5501:967a:c85e:a776:abcd ldap.emanciper.org"
     local-data-ptr: "188.165.53.185  www.emanciper.org"
     local-data-ptr: "188.165.53.185  emanciper.org"
     local-data-ptr: "193.70.18.144  mail.emanciper.org"
